fix deprecated use of Integer constructor